# DiscordScamBotGoByeBye

./: Cargo.toml  README.md  build.rs  main.py  requirements.txt
.github/workflows/: continuous-integration-testing.yml
src/: filter_trait.rs  main.rs  prob.rs  tests.rs  utils.rs
src/filters/: bot_filter.rs  mod.rs  ping_filter.rs  regex_filter.rs  role_filter.rs
src/prob/: tests.rs
src/utils/: mod.rs
