[package]
name = "DiscordScamBotGoByeBye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#features for serenity and tokio should be reviewed as needed
serenity = "0.10"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.16", features = ["full"]}
