[package]
name = "DiscordScamBotGoByeBye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#features for serenity and tokio should be reviewed as needed
serenity = "0.10"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.16", features = ["full"]}
log = "0.4"
env_logger = "0.9"
dirs = "4.0"
envy = {version = "0.4", optional = true}
toml = {version = "0.5", optional = true}
serde_yaml = {version = "0.8", optional = true}
serde_json = {version = "1.0", optional = true}
serde_ini = {version = "0.2", optional = true}

#features are to enable config to be gained from a selection of config files
#toml isn't a feature because it's a crate
[features]
default = ["env"]
env = ["envy"]
yaml = ["serde_yaml"]
ini = ["serde_ini"]
json = ["serde_json"]
